--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,67 +14,62 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-
+    <link rel="stylesheet" type="text/css" href="/css/about.css">
+    <script src="js/main.js"></script>
+    <script>
+        $(function () {
+            console.log('#nav li' + ' #{{page}}');
+            $('#bs-example-navbar-collapse-1 #{{page}}' ).addClass('active');
+        });
+    </script>
 </head>
 <body>
+<div>
+    <nav class="navbar navbar-inverse" style="margin-bottom: 0px;">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">HOME</a>
+            </div>
 
-<nav class="navbar navbar-inverse" style="margin-bottom: 0px;">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li id="index"><a href="/" >Home</a></li>
+                    <li id="about"><a href="/about" id="about">About</a></li>
+                    <li id="album"><a href="/album" >Album</a></li>
+                    <li id="blog"><a href="/blog" >Blog</a></li>
+
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+    <nav class="navbar navbar-inverse block">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+            <button type="button" class="navbar-toggle collapsed plus" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-2" aria-expanded="false" >
+                <span class="glyphicon glyphicon-plus" style="color: aliceblue"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+            <ul  class="nav nav-pills nav-stacked ">
+                <li role="presentation" class="active"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">Profile</a></li>
+                <li role="presentation"><a href="#">Messages</a></li>
             </ul>
-
         </div>
+    </nav>
+    <div>
+        {{{body}}}
     </div>
-
-</nav>
-<nav class="navbar navbar-inverse block">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed plus" data-toggle="collapse"
-                data-target="#bs-example-navbar-collapse-2" aria-expanded="false" >
-            <span class="glyphicon glyphicon-plus" style="color: aliceblue"></span>
-        </button>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-        <ul  class="nav nav-pills nav-stacked ">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">Profile</a></li>
-            <li role="presentation"><a href="#">Messages</a></li>
-        </ul>
-    </div>
-</nav>
-<div class="block">
-    {{{body}}}
 </div>
-
-
 </body>
 </html>
