--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,3 +1,38 @@
-<div class="col-xs-9">
-    <h3 class="title">blog</h3>
+<div class="block col-md-4 ">
+    <div class="blog-container">
+        <b><h3><img src="picture/1312415.jpg" class="small-avatar"><a href="#">blog 1</a></h3></b>
+        by <b>Phan</b> <br>
+        this blog 1
+    </div>
 </div>
+<div class="block col-md-4 ">
+    <div class="blog-container">
+        <b><h3><img src="picture/1312415.jpg" class="small-avatar"><a href="#">blog 1</a></h3></b>
+        by <b>Phan</b> <br>
+        this blog 1
+    </div>
+</div>
+<div class="block col-md-4 ">
+    <div class="blog-container">
+        <b><h3><img src="picture/1312415.jpg" class="small-avatar"><a href="#">blog 1</a></h3></b>
+        by <b>Phan</b> <br>
+        this blog 1
+    </div>
+</div>
+<div class="block col-md-4 ">
+    <div class="blog-container">
+        <b><h3><img src="picture/1312415.jpg" class="small-avatar"><a href="#">blog 1</a></h3></b>
+        by <b>Phan</b> <br>
+        this blog 1
+    </div>
+</div>
+<div class="block col-md-4 ">
+    <div class="blog-container">
+        <b><h3><img src="picture/1312415.jpg" class="small-avatar"><a href="#">blog 1</a></h3></b>
+        by <b>Phan</b> <br>
+        this blog 1
+    </div>
+</div>
+
+
+
