--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,7 +1,8 @@
 <h2>register an account</h2>
-<form action="/user" method="post">
+<form action="/user" method="post" enctype="multipart/form-data">
     <label for="register-email">Email</label> <input id="register-email" type="text" name="email"> <br>
     <label for="register-password">Password</label> <input id="register-password" type="password" name="password"><br>
-    <label for="register-name">Name</label> <input id="register-password" type="text" name="name"> <br>
+    <label for="register-name">Name</label> <input id="register-name" type="text" name="name"> <br>
+    <label for="register-avatar">avatar</label> <input id="register-avatar" type="file" name="avatar"> <br>
     <input type="submit" class="btn" value="submit">
 </form>
