--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -1,5 +1,9 @@
 
 .blog-container{
-    height: 165px;
+    height: 200px;
     width: 100%;
+    overflow: hidden;
+}
+.comment{
+    border: 1px solid blue;
 }
