--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/about.css">
     <link rel="stylesheet" type="text/css" href="/css/blog.css">
+    <link rel="stylesheet" type="text/css" href="/css/album.css">
     <script src="js/main.js"></script>
     <script>
         $(function () {
