--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,41 +33,40 @@
         padding-right: 0px;
     }
 }
-@media (max-width: 991px) {
-    .navbar-header {
+@media (max-width: 992px) {
+    .top.navbar-header {
         float: none;
     }
-    .navbar-toggle {
+    .top.navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .top.navbar-toggle {
         display: block;
     }
-    .navbar-collapse {
+    .top.navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
-    .navbar-collapse.collapse {
+    .top.navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .top.navbar-collapse.collapse {
         display: none!important;
     }
-    .navbar-nav {
+    .top.navbar-nav {
         float: none!important;
-        margin: 7.5px -15px;
+        margin-top: 7.5px;
     }
-    .navbar-nav>li {
+    .top.navbar-nav>li {
         float: none;
     }
-    .navbar-nav>li>a {
+    .top.navbar-nav>li>a {
         padding-top: 10px;
         padding-bottom: 10px;
     }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-    /* since 3.1.0 */
-    .navbar-collapse.collapse.in {
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
+    .top.collapse.in{
+        display:block !important;
     }
 }
 #form-logout{
