--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,11 +27,10 @@
 </head>
 <body>
 <div>
-    <nav class="navbar navbar-inverse" style="margin-bottom: 0px;">
+    <nav class=" top navbar navbar-inverse " style="margin-bottom: 0px;">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+            <div class="top navbar-header">
+                <button type="button" class="top navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -40,9 +39,7 @@
                 </button>
                 <a class="navbar-brand" href="/">HOME</a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="top collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li id="index"><a href="/">Home</a></li>
                     <li id="about"><a href="/about" id="about">About</a></li>
@@ -75,21 +72,24 @@
             </div>
         </div>
     </nav>
-    <nav class="navbar navbar-inverse block">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed plus" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
-                <span class="glyphicon glyphicon-plus" style="color: aliceblue"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-            <ul class="nav nav-pills nav-stacked ">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">Profile</a></li>
-                <li role="presentation"><a href="#">Messages</a></li>
-            </ul>
+    <nav class="navbar navbar-inverse block ">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed plus" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
+                    <span class="glyphicon glyphicon-plus" style="color: aliceblue"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                <ul class="nav nav-pills nav-stacked ">
+                    <li role="presentation" class="active"><a href="#">Home</a></li>
+                    <li role="presentation"><a href="/user/me">Profile</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
+
+
     <div>
         <div class="main-body">
             {{#each notices}}
